<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_centre"
            android:title="@string/centre" />

    </group>

    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />







            </group>
        </menu>

    </item>

</menu>